# OrbbecSDK-dev

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cmake-format.py
docs/api/: CMakeLists.txt  api_changes_at_v2.x.x.md  features_not_available_at_v2.x.x.md
docs/api/sphinx/: xml2Rst.py
examples/: CMakeLists.txt  CMakeLists_publish.txt  README.md  readme.md
examples/0.basic.enumerate/: CMakeLists.txt  CMakeLists_publish.txt  README.md  enumerate.cpp
examples/0.basic.quick_start/: CMakeLists.txt  README.md  quick_start.cpp
examples/1.stream.callback/: CMakeLists.txt  README.md  callback.cpp
examples/1.stream.color/: CMakeLists.txt  CMakeLists_publish.txt  README.md  color.cpp
examples/1.stream.depth/: CMakeLists.txt  CMakeLists_publish.txt  README.md  README_CN.md  depth.cpp
examples/1.stream.imu/: CMakeLists.txt  CMakeLists_publish.txt  README.md  imu.cpp
examples/1.stream.infrared/: CMakeLists.txt  CMakeLists_publish.txt  README.md  infrared.cpp
examples/1.stream.multi_streams/: CMakeLists.txt  README.md  multi_streams.cpp
examples/2.device.control/: CMakeLists.txt  CMakeLists_publish.txt  README.md  README_CN.md  SensorControl.cpp  device_control.cpp  sensor_control.cpp
examples/2.device.firmware_update/: CMakeLists.txt  README.md  device_firmware_update.cpp
examples/2.device.hot_plugin/: CMakeLists.txt  CMakeLists_publish.txt  README.md  hot_plugin.cpp
examples/2.device.multi_devices_firmware_update/: CMakeLists.txt  README.md  multi_devices_firmware_update.cpp
examples/2.device.net_device/: CMakeLists.txt  CMakeLists_publish.txt  net_device.cpp
examples/2.device.optional_depth_presets_update/: CMakeLists.txt  README.md  device.optional_depth_presets_update.cpp
examples/3.advanced.align/: CMakeLists.txt  align.cpp
examples/3.advanced.common_usages/: CMakeLists.txt  README.md  common_usages.cpp
examples/3.advanced.coordinate_transform/: CMakeLists.txt  README.md  coordinate_transform.cpp
examples/3.advanced.device_firmware_update/: device_firmware_update.cpp
examples/3.advanced.hdr/: CMakeLists.txt  CMakeLists_publish.txt  README.md  hdr.cpp
examples/3.advanced.hw_d2c_align/: CMakeLists.txt  hw_d2c_align.cpp
examples/3.advanced.laser_interleave/: CMakeLists.txt  README.md  laser_interleave.cpp
examples/3.advanced.multi_devices/: CMakeLists.txt  README.md  multi_device.cpp
examples/3.advanced.multi_devices_sync_gmsl/: CMakeLists.txt  README.md  ob_multi_devices_sync_gmsl.cpp
examples/3.advanced.multi_devices_sync_gmsl/syncconfig/: MultiDeviceSyncConfigGmsl.json
examples/3.advanced.multi_devices_sync_gmsl/utils/: cJSON.c  cJSON.h
examples/3.advanced.multi_devices_sync_gmsltrigger/: CMakeLists.txt  ob_multi_devices_sync_gmsltrigger.cpp
examples/3.advanced.point_cloud/: CMakeLists.txt  CMakeLists_publish.txt  README.md  point_cloud.cpp
examples/3.advanced.post_processing/: CMakeLists.txt  README.md  post_processing.cpp
examples/3.advanced.preset/: CMakeLists.txt  CMakeLists_publish.txt  README.md  preset.cpp
examples/3.advanced.sync_align/: CMakeLists.txt  CMakeLists_publish.txt  README.md  sync_align.cpp
examples/4.misc.logger/: CMakeLists.txt  README.md  logger.cpp
examples/4.misc.metadata/: CMakeLists.txt  README.md  metadata.cpp
examples/4.misc.opencv/: CMakeLists.txt  README.md
examples/4.misc.opencv/common/: cvhelper.hpp
examples/4.misc.opencv/grabcuts/: CMakeLists.txt  grabcuts.cpp
examples/4.misc.pcl/: CMakeLists.txt  README.md
examples/5.wrapper.opencv/: CMakeLists.txt  README.md
examples/5.wrapper.pcl/: CMakeLists.txt  README.md
examples/common/: CMakeLists.txt  utils.cpp  utils.hpp  utils_c.c  utils_c.h  utils_opencv.cpp  utils_opencv.hpp  window.hpp
examples/publish_files/: CMakeLists.txt  CMakelists.txt  build_examples.sh
examples/utils/: CMakeLists.txt  utils.hpp  utils_c.c  utils_opencv.cpp  utils_opencv.hpp  utils_types.h
extensions/: CMakeLists.txt  README.md  readme.md
scripts/: .gitignore  CMakeLists.txt
scripts/docker/: README.md  aarch64.dockerfile  build_docker.sh  entrypoint.sh  env.sh  nvidia_icd.json  x86_64.dockerfile
scripts/env_setup/: 99-obsensor-libusb.rules  install_udev_rules.sh  obsensor_metadata_win10.md  obsensor_metadata_win10.ps1  setup.sh
src/: CMakeLists.txt  VersionInfo.rc.in
src/context/: Context.cpp  Context.hpp
src/core/: CMakeLists.txt  CoreTypeHelper.cpp  CoreTypeHelper.hpp  IFrame.hpp  IStreamProfile.hpp
src/core/frame/: Frame.cpp  (+9 more)
src/device/: CMakeLists.txt  Device.cpp  Device.hpp  DeviceBase.cpp  DeviceBase.hpp  DeviceManager.cpp  DeviceManager.hpp  DevicePids.hpp  IAlgParamManager.hpp  IDepthWorkModeManager.hpp  IDevice.hpp  IDeviceClockSynchronizer.hpp  IDeviceComponent.hpp  IDeviceManager.hpp  IDeviceMonitor.hpp  IDeviceSyncConfigurator.hpp  IFrameInterleaveManager.hpp  IFrameMetadataParserContainerManager.hpp  IFrameTimestamp.hpp  IPresetManager.hpp  IProperty.hpp  ISensor.hpp  ISensorStreamStrategy.hpp  InternalTypes.hpp
src/filter/: CMakeLists.txt  FilterBase.cpp  FilterBase.hpp  FilterDecorator.cpp  FilterDecorator.hpp  FilterFactory.cpp  FilterFactory.hpp  IFilter.hpp
src/impl/: Advanced.cpp  Context.cpp  Device.cpp  Error.cpp  Filter.cpp  Frame.cpp  ImplTypes.cpp  ImplTypes.hpp  MultipleDevices.cpp  Pipeline.cpp  Sensor.cpp  StreamProfile.cpp  TypeHelper.cpp  Utils.cpp  Version.cpp
src/interface/: IDepthAlgModeManager.hpp  IDevice.hpp  IDeviceComponent.hpp  IDeviceEnumerator.hpp  IDeviceSyncConfigurator.hpp  IFilter.hpp  IFrame.hpp  IFrameMetadataParser.hpp  IPipeline.hpp  IPresetManager.hpp  IProperty.hpp  ISensor.hpp  ISensorStartStrategy.hpp  ISensorStreamStrategy.hpp  ISourcePort.hpp  IStreamProfile.hpp
src/parameter/: IMUParam.cpp  IMUParam.hpp
src/pipeline/: CMakeLists.txt  Config.cpp  Config.hpp  FrameAggregator.cpp  FrameAggregator.hpp  IPipeline.hpp  Pipeline.cpp  Pipeline.hpp
src/platform/: CMakeLists.txt  DeviceWatcher.hpp  IDeviceWatcher.hpp  IPal.hpp  ISourcePort.hpp  ObPal.hpp  Platform.cpp  Platform.hpp
src/shared/: CMakeLists.txt  InternalTypes.hpp
(+663 files in other folders)
